<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:src="@drawable/baseline_person_24"></ImageView>


        <EditText
            android:id="@+id/username"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:hint="@string/utilisateur"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:backgroundTint="#989797">
        </EditText>


        <EditText
            android:id="@+id/password"
            android:hint="@string/mot_de_passe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="25dp"
            android:backgroundTint="#989797">


        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"></LinearLayout>
        <Button
            android:id="@+id/connexion"
            android:backgroundTint="#989797"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connexion"
            android:textSize="25dp"></Button>

        <Button
            android:id="@+id/inscription"
            android:backgroundTint="#989797"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inscription"
            android:textSize="25dp"></Button>

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/welcome">
        </pl.droidsonroids.gif.GifImageView>

    </LinearLayout>
    </ScrollView>
</LinearLayout>