<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:src="@drawable/baseline_person_24"></ImageView>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inscription"
            android:layout_gravity="center"
            android:textSize="40dp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/utilisateur"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:hint="@string/utilisateur"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:backgroundTint="#989797">
        </EditText>


        <EditText
            android:id="@+id/motdepasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#989797"
            android:hint="@string/mot_de_passe"
            android:inputType="textPassword"
            android:textSize="25dp"></EditText>

        <EditText
            android:id="@+id/confirmation"
            android:hint="@string/confirmer_mot_de_passe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="25dp"
            android:backgroundTint="#989797">

        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"></LinearLayout>

        <Button
            android:id="@+id/btn_inscription"
            android:backgroundTint="#989797"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/inscription"
            android:layout_marginBottom="20dp"
            android:textSize="25dp"
            ></Button>
    </LinearLayout>
    </ScrollView>
</LinearLayout>