<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">



    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ScrollView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp">




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creation"
                    android:layout_gravity="center"
                    android:textSize="40dp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:hint="@string/nom_de_la_tache"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:backgroundTint="#989797">
                </TextView>

                <EditText
                    android:id="@+id/nom"
                    android:layout_width="match_parent"
                    android:hint="@string/enterName"
                    android:layout_height="wrap_content">
                </EditText>

                <TextView
                    android:layout_width="match_parent"
                    android:hint="@string/date_echeance"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:backgroundTint="#989797">
                </TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_id"
                    android:focusable="false"
                    android:inputType="none"
                    android:hint="@string/selectionner_une_date">
                </EditText>


                <Button
                    android:id="@+id/btn_creation"
                    android:backgroundTint="#989797"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/creation"
                    android:textSize="25dp"
                    android:layout_marginBottom="20dp"></Button>
            </LinearLayout>

            </ScrollView>


        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/navigation_view_menu"
            app:headerLayout="@layout/mon_header"/>
    </androidx.drawerlayout.widget.DrawerLayout>






</LinearLayout>